Resolve contrast and fa icon errors in results page including custom changes to rgbo theme. *Accessibility

--- a/modules/xerte/parent_templates/Nottingham/models_html5/results.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/results.css
@@ -90,7 +90,7 @@
 	border-radius: 12px;
 }
 .fas.fa-times-circle{
-	color:red;
+	color:#CD2A2A;
 	background: white;
 	border-radius: 12px;
 }
