--- a/themes/Nottingham/rgbo/rgbo.css
+++ b/themes/Nottingham/rgbo/rgbo.css
@@ -102,6 +102,9 @@
   border: #117BAD;
   color: #ffffff; }
 
+.back.panel a {
+  color: #ffffff; }
+
 .x_links_page #linkHolder a {
   color: blue; }
 
@@ -318,7 +321,7 @@ a.hotspot, a.hotspot.selected {
   color: white !important; }
 
 .x_grid_page #grid ul li.static {
-  background: none;
+  background: #000000;
   border-color: transparent; }
 
 /*****timeline matching pairs*****/
@@ -380,7 +383,7 @@ a.hotspot, a.hotspot.selected {
   background-color: orange;
   margin: .5em; }
 
-.x_youtuberss_page #resultsHolder div a{
+.x_youtuberss_page #resultsHolder div a {
   color: #0000A0; }
 
 .x_youtuberss_page .shadedDiv {
@@ -424,6 +427,29 @@ div#shorturltodisplay a {
 
 .x_results_page #general_summary th {
   background: #ffffff; }
+
+.fas.fa-check-circle {
+  color: green; }
+
+.fas.fa-times-circle {
+  color: #CD2A2A; }
+
+.fas.fa-circle.blue {
+  color: white;
+  background: black;
+  border-radius: 12px; }
+
+.far.fa-circle.blue {
+  color: white;
+  border-radius: 12px; }
+
+.x_results_page tr.alt .far.fa-circle.blue {
+  color: #ffffff !important;
+  border-radius: 12px; }
+
+.x_results_page tr .far.fa-circle.blue {
+  color: #010101 !important;
+  border-radius: 12px; }
 
 @media (min-width: 768px) {
   .tick, img.result {
